<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_scr"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:weightSum="1" >

            <LinearLayout
                android:id="@+id/main_lyt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"
                android:background="@drawable/border_operator">



                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/goodman"/>
                <LinearLayout
                    android:id="@+id/spinner_lyt"
                    android:layout_width="500dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/operator_colon"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:layout_weight="40">

                    </TextView>
                    <Button
                        android:id="@+id/operator_au_tv"
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:textAllCaps="false"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_operator"
                        android:background="@drawable/background"
                        android:gravity="center"
                        android:singleLine="true"
                        android:ems="10" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spinner_lyt2"
                    android:layout_width="500dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/die_id_colon"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:layout_weight="40"/>

                    <Button
                        android:id="@+id/die_au_tv"
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:background="@drawable/background"
                        android:textAllCaps="false"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_die_id_1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:ems="10" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/spinner_lyt3"
                    android:layout_width="500dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/part_id_colon"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:layout_weight="40"/>

                    <Button
                        android:id="@+id/part_au_tv"
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:textAllCaps="false"
                        android:background="@drawable/background"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_part_id_1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:ems="10" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/spinner_lyt4"
                    android:layout_width="500dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="40"
                        android:text="@string/die_type_colon"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="60"
                        android:background="@drawable/background"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <Spinner
                            android:id="@+id/dieTypeSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:prompt="@string/app_name"  />


                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnContinue"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_bg"
                    android:text="@string/continue_str"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>