<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backgroung_img"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="115dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border_operator"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/app_logo"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="200dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/empIdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:hint="@string/enter_user_name"
                android:inputType="textNoSuggestions"
                android:longClickable="false"
                android:maxLength="8"
                android:maxLines="1"
                android:padding="15dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/color_cursor">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/pinEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/background"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:hint="@string/enter_pin"
                android:inputType="numberPassword"
                android:longClickable="false"
                android:maxLength="4"
                android:maxLines="1"
                android:padding="15dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/color_cursor">

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_bg"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
