<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaskingApplication.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">
                    <ImageView
                        android:id="@+id/capture_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:padding="10dp"
                        android:src="@drawable/camera_retake_icon" />

                    <ImageView
                        android:id="@+id/settings_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:padding="10dp"
                        android:visibility="gone"
                        android:src="@drawable/new_settings" />
                </LinearLayout>



            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/cPreview"
        android:layout_width="1920dp"
        android:layout_height="1080dp"
        android:layout_below="@+id/appBarLayout"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:layout_below="@+id/appBarLayout"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCam"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:background="@drawable/red_rounded_corner_shape"
            android:text="@string/capture"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSendEdge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:background="@drawable/red_rounded_corner_shape"
            android:text="@string/btn_send_to_edge"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>