<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/main_lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backgroung_img"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="115dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border_operator"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/app_logo"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY" />
        <!-- <Button
             android:id="@+id/operator_au_tv"
             android:padding="10dp"
             android:layout_marginTop="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Operator"
             android:background="@drawable/background"
             android:gravity="center"
             android:paddingEnd="5dp"
             android:paddingStart="5dp"
             android:layout_gravity="center"
             android:singleLine="true"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Small">
         </Button>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="200dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/die_au_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background"
                android:gravity="center"
                android:hint="@string/enter_die_id"
                android:padding="15dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>

            <Button
                android:id="@+id/part_au_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/background"
                android:gravity="center"
                android:hint="@string/enter_part_id"
                android:padding="15dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textColorHint="@color/black"></Button>

            <Spinner
                android:id="@+id/dieTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/background"
                android:padding="15dp"
                android:prompt="@string/app_name"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_bg"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="Continue"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
